Fixed theme switcher button issue on mobile menu

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ body.light-theme {
 }
 
 /* Navigation */
-
 nav {
   display: flex;
   flex-direction: column;
@@ -288,6 +287,7 @@ a.page-nav {
 @media (max-width: 768px) {
   nav {
     padding-top: 50px;
+    justify-content: flex-start;
     opacity: 0.9;
     transform: translateX(-110%);
     transition: transform 0.3s linear;
